[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/pwrup/Pwrup.gd" type="Script" id=1]
[ext_resource path="res://sprites/pwrup/spawn_4.png" type="Texture" id=2]
[ext_resource path="res://sprites/pwrup/spawn_3.png" type="Texture" id=3]
[ext_resource path="res://sprites/pwrup/spawn_2.png" type="Texture" id=4]
[ext_resource path="res://sprites/pwrup/spawn_1.png" type="Texture" id=5]
[ext_resource path="res://sprites/pwrup/pwrup_dynamite.tres" type="SpriteFrames" id=6]

[sub_resource type="Animation" id=1]
resource_name = "bob"
length = 1.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("PwrupSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "conveyorfall"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.4, 1 ),
"transitions": PoolRealArray( 0.5, 0, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -32, -32 ), Vector2( -32, -32 ), Vector2( -16, 512 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PwrupSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ 720.0, 0.0, 180.0 ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[node name="Pwrup" type="Area2D" groups=[
"pwrups",
]]
z_index = 3
z_as_relative = false
collision_layer = 2147483650
script = ExtResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../Container")
autoplay = "bob"
anims/bob = SubResource( 1 )
anims/conveyorfall = SubResource( 4 )

[node name="Container" type="Node2D" parent="."]
position = Vector2( 0, -8 )
rotation = 12.5664

[node name="SpawnAnim" type="AnimatedSprite" parent="Container"]
z_index = 5
z_as_relative = false
frames = SubResource( 2 )

[node name="PwrupSprite" type="AnimatedSprite" parent="Container"]
rotation = 12.5664
frames = ExtResource( 6 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Pwrup_body_entered"]
[connection signal="animation_finished" from="Container/SpawnAnim" to="." method="_on_SpawnAnim_animation_finished"]
